GENERATOR_OUTPUT/src/kubeflow-contrib/kserve/models-web-app/patches/patch-kserve-models-web-app-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kserve-models-web-app
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-istio-gateway/kubeflow-gateway
