GENERATOR_OUTPUT/src/kubeflow-contrib/kserve/models-web-app/patches/patch-kserve-models-web-app-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kserve-models-web-app
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow-istio-gateway/sa/kubeflow-gateway
